testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment35.errors.txt
bug26877.js(1,17): error TS2694: Namespace 'Emu' has no exported member 'D'.


==== bug26877.js (1 errors) ====
    /** @param {Emu.D} x */
                    ~
!!! error TS2694: Namespace 'Emu' has no exported member 'D'.
    function ollKorrect(x) {
        x._model
        const y = new Emu.D()
        const z = Emu.D._wrapperInstance;
    }
    Emu.D = class {
        constructor() {
            this._model = 1
        }
    }
    
==== second.js (0 errors) ====
    var Emu = {}
    /** @type {string} */
    Emu.D._wrapperInstance;
    
    